--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: c
 
 addons:
-  apt:
-    packages:
+  apt_packages:
     - libgmp-dev
     - libreadline-dev
     - zlib1g-dev
@@ -10,6 +9,7 @@ addons:
 matrix:
   include:
     - env: GAPBRANCH=master
+    - env: GAPBRANCH=stable-4.11
     - env: GAPBRANCH=stable-4.10
     - env: GAPBRANCH=stable-4.9
 
