--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,5 +1,6 @@
 name: AutPGrp
-version: 1.11
+version: "1.11"
+license: "GPL-2.0-or-later"
 date: 2022-08-05
 description: |
     Computing the Automorphism Group of a p-Group
@@ -32,3 +33,31 @@ abstract: |
 status: accepted
 doc-html: htm/chapters.htm
 doc-pdf: doc/manual.pdf
+keywords: |
+    p-group, automorphism group.
+citeas: |
+    <p class='BibEntry'>
+    [<span class='BibKey'>EHO22</span>]   <b class='BibAuthor'>Eick, B., Horn, M. and O'Brien, E.</b>,
+     <i class='BibTitle'>AutPGrp, Computing the Automorphism Group of a p-Group,
+             Version 1.11</i>
+     (<span class='BibYear'>2022</span>)<br />
+    (<span class='BibNote'>Refereed GAP package</span>),
+    <span class='BibHowpublished'><a href="https://gap-packages.github.io/autpgrp/">https://gap-packages.github.io/autpgrp/</a></span>.
+    </p>
+    
+
+bibtex: |
+    @misc{ AutPGrp1.11,
+      author =           {Eick, B. and Horn, M. and O'Brien, E.},
+      title =            {{AutPGrp},  Computing  the  Automorphism  Group  of  a
+                          p-Group, {V}ersion 1.11},
+      month =            {Aug},
+      year =             {2022},
+      note =             {Refereed GAP package},
+      howpublished =     {\href        {https://gap-packages.github.io/autpgrp/}
+                          {\texttt{https://gap-packages.github.io/}\discretionary
+                          {}{}{}\texttt{autpgrp/}}},
+      keywords =         {p-group; automorphism group},
+      printedkey =       {EHO22}
+    }
+
