--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,7 +1,7 @@
 name: AutPGrp
-version: "1.11"
+version: "1.11.1"
 license: "GPL-2.0-or-later"
-date: 2022-08-05
+date: 2024-04-10
 description: |
     Computing the Automorphism Group of a p-Group
 
@@ -25,7 +25,7 @@ packageinfo: https://gap-packages.github.io/autpgrp/PackageInfo.g
 
 downloads:
     - name: .tar.gz
-      url: https://github.com/gap-packages/autpgrp/releases/download/v1.11/autpgrp-1.11.tar.gz
+      url: https://github.com/gap-packages/autpgrp/releases/download/v1.11.1/autpgrp-1.11.1.tar.gz
 
 abstract: |
     The <span class="pkgname">AutPGrp</span> package introduces a new function to compute the automorphism group of a finite $p$-group. The underlying algorithm is a refinement of the methods described in O'Brien (1995). In particular, this implementation is more efficient in both time and space requirements and hence has a wider range of applications than the ANUPQ method. Our package is written in GAP code and it makes use of a number of methods from the GAP library such as the MeatAxe for matrix groups and permutation group functions. We have compared our method to the others available in GAP. Our package usually out-performs all but the method designed for finite abelian groups. We note that our method uses the small groups library in certain cases and hence our algorithm is more effective if the small groups library is installed.
@@ -37,27 +37,27 @@ keywords: |
     p-group, automorphism group.
 citeas: |
     <p class='BibEntry'>
-    [<span class='BibKey'>EHO22</span>]   <b class='BibAuthor'>Eick, B., Horn, M. and O'Brien, E.</b>,
+    [<span class='BibKey'>EHO24</span>]   <b class='BibAuthor'>Eick, B., Horn, M. and O'Brien, E.</b>,
      <i class='BibTitle'>AutPGrp, Computing the Automorphism Group of a p-Group,
-             Version 1.11</i>
-     (<span class='BibYear'>2022</span>)<br />
-    (<span class='BibNote'>Refereed GAP package</span>),
+             Version 1.11.1</i>
+     (<span class='BibYear'>2024</span>)<br />
+    (<span class='BibNote'>GAP package</span>),
     <span class='BibHowpublished'><a href="https://gap-packages.github.io/autpgrp/">https://gap-packages.github.io/autpgrp/</a></span>.
     </p>
     
 
 bibtex: |
-    @misc{ AutPGrp1.11,
+    @misc{ AutPGrp,
       author =           {Eick, B. and Horn, M. and O'Brien, E.},
-      title =            {{AutPGrp},  Computing  the  Automorphism  Group  of  a
-                          p-Group, {V}ersion 1.11},
-      month =            {Aug},
-      year =             {2022},
-      note =             {Refereed GAP package},
+      title =            {{AutPGrp},  {Computing  the  Automorphism  Group  of a
+                          p\texttt{\symbol{45}}Group}, {V}ersion 1.11.1},
+      month =            {Apr},
+      year =             {2024},
+      note =             {GAP package},
       howpublished =     {\href        {https://gap-packages.github.io/autpgrp/}
-                          {\texttt{https://gap-packages.github.io/}\discretionary
+                          {\texttt{https://gap\texttt{\symbol{45}}packages.github.io/}\discretionary
                           {}{}{}\texttt{autpgrp/}}},
-      keywords =         {p-group; automorphism group},
-      printedkey =       {EHO22}
+      keywords =         {p\texttt{\symbol{45}}group; automorphism group},
+      printedkey =       {EHO24}
     }
 
